--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -49,25 +49,37 @@
 <div id="navbar_top" class="navbar container-fluid bg-light shadow-sm">
     <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 d-flex m-auto align-items-center">
         <div class="container flex justify-content-center" id="navbarCollapse">
-            <a href="" class="nav-item nav-link text-info bg-brand m-1 p-0 rounded-sm">
-                <img class="w-25 border-0" src="/img/icon/laptop_icon.png">
-                <span class="flex text-nowrap text-info font-bold d-inline-block">Laptop</span>
+            <a href="" class="nav-link text-info bg-brand p-0 rounded-sm">
+                <div class="d-flex align-items-center pl-1 pr-1 ml-1 mr-1 p1">
+                    <div style="width: 50px; height: 50px;">
+                        <img class="border-0 h-100 w-100 d-inline-block" src="/img/icon/laptop_icon.png" alt="">
+                    </div>
+                    <span class="d-flex text-nowrap text-info font-bold pl-1">Laptop</span>
+                </div>
             </a>
-            <a href="" class="nav-item nav-link text-info bg-brand m-1 p-0 rounded-sm">
-                <img class="w-25 rounded border-0" src="/img/icon/monitor_icon.png">
-                <span class="flex text-nowrap text-info font-bold">Màn hình</span>
+            <a href="" class="nav-link text-info bg-brand p-0 rounded-sm">
+                <div class="d-flex align-items-center pl-1 pr-1 ml-1 mr-1 p1">
+                    <img class="rounded border-0" src="/img/icon/monitor_icon.png" style="width: 50px; height: 50px;">
+                    <span class="d-flex text-nowrap text-info font-bold pl-1">Màn hình</span>
+                </div>
             </a>
-            <a href="" class="nav-item nav-link text-info bg-brand m-1 p-0 rounded-sm">
-                <img class=" w-25 border-0" src="/img/icon/keyboard_icon.png">
-                <span class="flex text-nowrap text-info font-bold">Bàn phím</span>
+            <a href="" class="nav-link text-info bg-brand p-0 rounded-sm">
+                <div class="d-flex align-items-center pl-1 pr-1 ml-1 mr-1 p1">
+                    <img class="border-0" src="/img/icon/keyboard_icon.png" style="width: 50px; height: 50px;">
+                    <span class="flex text-nowrap text-info font-bold pl-1">Bàn phím</span>
+                </div>
             </a>
-            <a href="" class="nav-item nav-link text-info bg-brand m-1 p-0 rounded-sm">
-                <img class=" w-25 border-0" src="/img/icon/pc_icon.png">
-                <span class="flex text-nowrap text-info font-bold">PC</span>
+            <a href="" class="nav-link text-info bg-brand p-0 rounded-sm h-100">
+                <div class="d-flex align-items-center pl-1 pr-1 ml-1 mr-1 p1">
+                    <img class="border-0" src="/img/icon/pc_icon.png" style="width: 50px; height: 50px;">
+                    <span class="flex text-nowrap text-info font-bold pl-1">PC</span>
+                </div>
             </a>
-            <a href="" class="nav-item nav-link text-info bg-brand m-1 p-0 rounded-sm">
-                <img class=" w-25 border-0" src="/img/icon/audio_icon.png">
-                <span class="flex text-nowrap text-info font-bold">Âm thanh</span>
+            <a href="" class="nav-link text-info bg-brand p-0 rounded-sm">
+                <div class="d-flex align-items-center pl-1 pr-1 ml-1 mr-1 p1">
+                    <img class="border-0" src="/img/icon/audio_icon.png" style="width: 50px; height: 50px;">
+                    <span class="flex text-nowrap text-info font-bold pl-1">Âm thanh</span>
+                </div>
             </a>
         </div>
     </nav>
