--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -2,19 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" lang="en">
 
-<head th:include="fragments/head" :: head>
+<head th:include="fragments/head">
     <title>Demo</title>
 </head>
 
 <body class="">
 <!-- Header -->
-<div th:replace="fragments/header" :: header></div>
+<div th:replace="fragments/header"></div>
 
 <div class="container-xl">
     <div layout:fragment="content"></div>
 </div>
 
-<div th:replace="fragments/footer" :: footer></div>
+<div th:replace="fragments/footer"></div>
 
 <div th:include="fragments/jscript"></div>
 
