--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<body>
+<th:block th:fragment="footer">
 <!-- Footer Start -->
-<div class="container-fluid bg-light text-secondary mt-3 pt-5 shadow-lg" th:fragment="footer">
+<div class="container-fluid bg-light text-secondary mt-3 pt-5 shadow-lg">
     <div class="row px-xl-5 pt-5">
         <div class="col-lg-4 col-md-12 mb-5 pr-3 pr-xl-5">
             <h5 class="text-info text-uppercase mb-4">LIÊN HỆ</h5>
@@ -65,5 +65,5 @@
         </div>
     </div>
 </div>
-</body>
+</th:block>
 </html>
