--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,69 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <th:block th:fragment="footer">
-<!-- Footer Start -->
-<div class="container-fluid bg-light text-secondary mt-3 pt-5 shadow-lg">
-    <div class="row px-xl-5 pt-5">
-        <div class="col-lg-4 col-md-12 mb-5 pr-3 pr-xl-5">
-            <h5 class="text-info text-uppercase mb-4">LIÊN HỆ</h5>
-            <p class="mb-2"><i class="fa fa-map-marker-alt text-info mr-3"></i><span class="font-weight-semi-bold m-0 text-info">43/38 Cộng Hoà, P.4, Tân Bình, Tp.Hồ Chí Minh</span></p>
-            <p class="mb-2"><i class="fa fa-envelope text-info mr-3"></i><span class="font-weight-semi-bold m-0 text-info">manhhung.actvn@cronus.com</span></p>
-            <p class="mb-0"><i class="fa fa-phone-alt text-info mr-3"></i><span class="font-weight-semi-bold m-0 text-info">+84 825 405 779</span></p>
-        </div>
-        <div class="col-lg-8 col-md-12">
+    <!-- Footer Start -->
+    <div class="container bg-light text-secondary mt-3 shadow-sm p-0 rounded">
+        <div class="container">
             <div class="row">
-                <div class="col-md-4 mb-5">
-                    <h5 class="text-info text-uppercase mb-4">LIÊN KẾT</h5>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-info mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Trang chủ</a>
-                        <a class="text-info mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Của hàng của chúng tôi</a>
-                        <a class="text-info mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Sản phẩn</a>
-                        <a class="text-info mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Giỏ hàng</a>
-                        <a class="text-info mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Thanh toán</a>
+                <div class="col m-2" style="padding: 15px;">
+                    <div class="col-lg-4">
+                        <a class="text-decoration-none pl-3" href="">
+                            <span class="h2 text-uppercase text-info bg-transparent font-weight-bold px-2">Cronus</span>
+                        </a>
                     </div>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <h5 class="text-info text-uppercase mb-4">Tài khoản của tôi</h5>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-info mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Quản lý</a>
-                        <a class="text-info mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Đăng nhập</a>
-                        <a class="text-info mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Đăng xuất</a>
+                    <div class="col">
+                        <div class="text-muted pl-4 mt-1">
+                            <p>Chân thành phục vụ từ 2022</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <h5 class="text-info text-uppercase mb-4">Tin tức</h5>
-                    <form action="">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Email của bạn">
-                            <div class="input-group-append">
-                                <button class="btn btn-info">Đăng ký</button>
+                    <div class="pt-1">
+                        <div class="row text-left text-dark pl-4">
+                            <div class="col">
+                                <a class="nav-link text-info bg-brand p-0 rounded-sm text-center" href="">
+                                    <div class="d-flex align-items-center p-2">
+                                        <span class="d-flex text-nowrap text-info font-bold pl-1 font-weight-bold">Về chúng tôi</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col">
+                                <a class="nav-link text-info bg-brand p-0 rounded-sm text-center" href="">
+                                    <div class="d-flex align-items-center p-2">
+                                        <span class="d-flex text-nowrap text-info font-bold pl-1 font-weight-bold">Vì khách hàng</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col">
+                                <a class="nav-link text-info bg-brand p-0 rounded-sm text-center" href="">
+                                    <div class="d-flex align-items-center p-2">
+                                        <span class="d-flex text-nowrap text-info font-bold pl-1 font-weight-bold">Đội ngũ</span>
+                                    </div>
+                                </a>
                             </div>
                         </div>
-                    </form>
-                    <h6 class="text-info text-uppercase mt-4 mb-3">Theo dõi</h6>
-                    <div class="d-flex">
-                        <a class="btn btn-info btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-info btn-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-info btn-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-info btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                        <div class="row text-left text-dark pl-4">
+                            <div class="col">
+                                <a class="nav-link text-info bg-brand p-0 rounded-sm text-center" href="">
+                                    <div class="d-flex align-items-center p-2">
+                                        <span class="d-flex text-nowrap text-info font-bold pl-1 font-weight-bold">Tin tức</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col">
+                                <a class="nav-link text-info bg-brand p-0 rounded-sm text-center" href="">
+                                    <div class="d-flex align-items-center p-2">
+                                        <span class="d-flex text-nowrap text-info font-bold pl-1 font-weight-bold">Khuyến mại</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col">
+                                <a class="nav-link text-info bg-brand p-0 rounded-sm text-center" href="">
+                                    <div class="d-flex align-items-center p-2">
+                                        <span class="d-flex text-nowrap text-info font-bold pl-1 font-weight-bold"></span>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col p-0">
+                    <div>
+                        <img class="img-fluid rounded-right " src="/img/cover/cover.png">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row border-top mx-xl-5 py-4" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <div class="col-md-6 px-xl-0">
-            <p class="mb-md-0 text-center text-md-left text-secondary">
-                &copy; <a class="text-info" href="#">Domain</a>. All Rights Reserved. Designed
-                by
-                <a class="text-info" href="https://htmlcodex.com">Cronus</a>
-                <br>Distributed By: <a href="https://themewagon.com" target="_blank">HungFarm</a>
-            </p>
-        </div>
-        <div class="col-md-6 px-xl-0 text-center text-md-right">
-            <img class="img-fluid" src="/img/payments.png" alt="">
+    <div class="container-fluid row border-top bg-transparent text-center p-1 m-0"
+         style="border-color: rgba(256, 256, 256, .1) !important;">
+        <div class="container">
+            <div style="font-size: 10px;">
+                <p class="m-0">
+                    © 2018. Công ty TNHH Công nghệ Cronus - GPĐKKD: 1234567890 do Bộ Thông Tin và Truyền Thông cấp ngày
+                    01/01/2022. Địa chỉ: 43/38 Đường Cộng Hoà, Phường 4, Quận Tân Bình, Tp. Hồ Chí Minh. Điện thoại:
+                    0825405779.
+                </p>
+            </div>
         </div>
     </div>
-</div>
 </th:block>
 </html>
