--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,6 +1,6 @@
 <head th:fragment="head" xmlns:th="http://www.thymeleaf.org">
     <meta charset="utf-8">
-    <title>MultiShop - Online Shop Website Template</title>
+    <title>Cronus | Laptop, máy tính xách tay giá tốt nhất Việt Nam</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
