--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
       lang="en">
 
 <th:block layout:fragment="content">
-    <div class="bg-light pt-5 shadow-lg">
+    <div class="bg-light pt-5 mt-3 shadow-lg rounded">
         <!-- Carousel Start -->
         <div class="container-fluid mb-3">
             <div class="row px-xl-5 d-flex">
