--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -10,7 +10,7 @@
 <!-- Header -->
 <div th:replace="fragments/header"></div>
 
-<div class="container-xl">
+<div class="container p-0">
     <div layout:fragment="content"></div>
 </div>
 
@@ -18,7 +18,5 @@
 
 <div th:include="fragments/jscript"></div>
 
-<!--&lt;!&ndash; Back to Top &ndash;&gt;-->
-<!--<a href="#" class="btn btn-info back-to-top"><i class="fa fa-angle-double-up"></i></a>-->
 </body>
 </html>
