--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,16 +3,16 @@
 <th:block th:fragment="header">
 <!-- Topbar Start -->
 <div class="container">
-    <div class="row align-items-center bg-transparent py-3 px-xl-5 d-none d-lg-flex">
+    <div class="row align-items-center bg-transparent py-2 px-xl-5 d-none d-lg-flex">
         <div class="col-lg-4">
             <a href="" class="text-decoration-none">
-                <span class="h1 text-uppercase text-info bg-transparent px-2">Cronus</span>
+                <span class="h2 text-uppercase text-info bg-transparent font-weight-bold px-2">Cronus</span>
             </a>
         </div>
         <div class="col-lg-4 col-6 text-left">
             <form action="">
-                <div class="input-group rounded">
-                    <input type="text" class="form-control rounded" placeholder="Bạn tìm gì...">
+                <div class="input-group rounded-pill">
+                    <input class="form-control rounded-lg text-size-14" placeholder="Sản phẩm ..." type="text">
                     <div class="input-group-append">
                             <span class="input-group-text bg-transparent text-info border-0">
                                 <i class="fa fa-search"></i>
@@ -50,7 +50,7 @@
     <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 d-flex m-auto align-items-center">
         <div class="container flex justify-content-center" id="navbarCollapse">
             <a href="" class="nav-link text-info bg-brand p-0 rounded-sm">
-                <div class="d-flex align-items-center pl-1 pr-1 ml-2 mr-2 p1">
+                <div class="d-flex align-items-center pl-1 pr-1 ml-2 mr-2">
                     <div style="width: 50px; height: 50px;">
                         <img class="border-0 h-100 w-100 d-inline-block" src="/img/icon/laptop_icon.png" alt="">
                     </div>
@@ -58,25 +58,25 @@
                 </div>
             </a>
             <a href="" class="nav-link text-info bg-brand p-0 rounded-sm">
-                <div class="d-flex align-items-center pl-1 pr-1 ml-2 mr-2 p1">
+                <div class="d-flex align-items-center pl-1 pr-1 ml-2 mr-2 p-1">
                     <img class="rounded border-0" src="/img/icon/monitor_icon.png" style="width: 50px; height: 50px;">
                     <span class="d-flex text-nowrap text-info font-bold pl-2 pr-1 font-weight-bold">Màn hình</span>
                 </div>
             </a>
             <a href="" class="nav-link text-info bg-brand p-0 rounded-sm">
-                <div class="d-flex align-items-center pl-1 pr-1 ml-2 mr-2 p1">
+                <div class="d-flex align-items-center pl-1 pr-1 ml-2 mr-2 p-1">
                     <img class="border-0" src="/img/icon/keyboard_icon.png" style="width: 50px; height: 50px;">
                     <span class="flex text-nowrap text-info font-bold pl-2 pr-1 font-weight-bold">Bàn phím</span>
                 </div>
             </a>
             <a href="" class="nav-link text-info bg-brand p-0 rounded-sm h-100">
-                <div class="d-flex align-items-center pl-1 pr-1 ml-2 mr-2 p1">
+                <div class="d-flex align-items-center pl-1 pr-1 ml-2 mr-2 p-1">
                     <img class="border-0" src="/img/icon/pc_icon.png" style="width: 50px; height: 50px;">
                     <span class="flex text-nowrap text-info font-bold pl-2 pr-1 font-weight-bold">PC</span>
                 </div>
             </a>
             <a href="" class="nav-link text-info bg-brand p-0 rounded-sm">
-                <div class="d-flex align-items-center pl-1 pr-1 ml-2 mr-2 p1">
+                <div class="d-flex align-items-center pl-1 pr-1 ml-2 mr-2 p-1">
                     <img class="border-0" src="/img/icon/audio_icon.png" style="width: 50px; height: 50px;">
                     <span class="flex text-nowrap text-info font-bold pl-2 pr-1 font-weight-bold">Âm thanh</span>
                 </div>
