--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -8,7 +8,7 @@
                 <div class="col m-2" style="padding: 15px;">
                     <div class="col-lg-4">
                         <a class="text-decoration-none pl-3" href="">
-                            <span class="h2 text-uppercase text-info bg-transparent font-weight-bold px-2">Cronus</span>
+                            <span class="h2 text-uppercase text-info bg-transparent font-weight-bold px-2">Cnus</span>
                         </a>
                     </div>
                     <div class="col">
