--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,7 @@
     <div class="row align-items-center bg-transparent py-2 px-xl-5 d-none d-lg-flex">
         <div class="col-lg-4">
             <a href="" class="text-decoration-none">
-                <span class="h2 text-uppercase text-info bg-transparent font-weight-bold px-2">Cronus</span>
+                <span class="h2 text-uppercase text-info bg-transparent font-weight-bold px-2">Cnus</span>
             </a>
         </div>
         <div class="col-lg-4 col-6 text-left">
