--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row align-items-center bg-transparent py-2 px-xl-5 d-none d-lg-flex">
         <div class="col-lg-4">
-            <a href="" class="text-decoration-none">
+            <a href="/" class="text-decoration-none">
                 <span class="h2 text-uppercase text-info bg-transparent font-weight-bold px-2">Cnus</span>
             </a>
         </div>
@@ -21,7 +21,7 @@
                 </div>
             </form>
         </div>
-        <div class="col-lg-3 text-right">
+        <div class="col-lg-4 text-right">
             <a href="" class="btn px-0">
                 <i class="fas fa-heart text-info"></i>
                 <span class="badge text-secondary border border-secondary rounded-circle"
@@ -32,14 +32,6 @@
                 <span class="badge text-secondary border border-secondary rounded-circle"
                       style="padding-bottom: 2px;">0</span>
             </a>
-        </div>
-        <div class="col-lg-1 d-inline-flex justify-content-end">
-            <a type="button" class="fas fa-user-circle dropdown-toggle text-info" data-toggle="dropdown">
-            </a>
-            <div class="dropdown-menu dropdown-menu-right">
-                <button class="dropdown-item" type="button">Đăng nhập</button>
-                <button class="dropdown-item" type="button">Đăng ký</button>
-            </div>
         </div>
     </div>
 </div>
