--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6402,6 +6402,10 @@ button.bg-danger:focus {
     background-color: #FFFFFF !important;
 }
 
+.bg-gray {
+    background-color: #ecf0f4 !important;
+}
+
 .bg-brand:hover {
     background-color: #ecf0f4 !important;
 }
@@ -6507,7 +6511,7 @@ button.bg-dark:focus {
 }
 
 .rounded-sm {
-    border-radius: 0.2rem !important;
+    border-radius: 0.5rem !important;
 }
 
 .rounded {
@@ -7682,16 +7686,80 @@ button.bg-dark:focus {
     box-shadow: none !important;
 }
 
+.w-5 {
+    width: 50% !important;
+}
+
+.w-10 {
+    width: 10% !important;
+}
+
+.w-15 {
+    width: 15% !important;
+}
+
+.w-20 {
+    width: 20% !important;
+}
+
 .w-25 {
     width: 25% !important;
+}
+
+.w-30 {
+    width: 30% !important;
+}
+
+.w-35 {
+    width: 35% !important;
+}
+
+.w-40 {
+    width: 40% !important;
+}
+
+.w-45 {
+    width: 45% !important;
 }
 
 .w-50 {
     width: 50% !important;
 }
 
+.w-55 {
+    width: 55% !important;
+}
+
+.w-60 {
+    width: 60% !important;
+}
+
+.w-65 {
+    width: 65% !important;
+}
+
+.w-70 {
+    width: 70% !important;
+}
+
 .w-75 {
     width: 75% !important;
+}
+
+.w-80 {
+    width: 80% !important;
+}
+
+.w-85 {
+    width: 85% !important;
+}
+
+.w-90 {
+    width: 90% !important;
+}
+
+.w-95 {
+    width: 95% !important;
 }
 
 .w-100 {
@@ -7702,16 +7770,80 @@ button.bg-dark:focus {
     width: auto !important;
 }
 
+.h-5 {
+    height: 5% !important;
+}
+
+.h-10 {
+    height: 10% !important;
+}
+
+.h-15 {
+    height: 15% !important;
+}
+
+.h-20 {
+    height: 20% !important;
+}
+
 .h-25 {
     height: 25% !important;
+}
+
+.h-30 {
+    height: 30% !important;
+}
+
+.h-35 {
+    height: 35% !important;
+}
+
+.h-40 {
+    height: 40% !important;
+}
+
+.h-45 {
+    height: 45% !important;
 }
 
 .h-50 {
     height: 50% !important;
 }
 
+.h-55 {
+    height: 55% !important;
+}
+
+.h-60 {
+    height: 60% !important;
+}
+
+.h-65 {
+    height: 65% !important;
+}
+
+.h-70 {
+    height: 70% !important;
+}
+
 .h-75 {
     height: 75% !important;
+}
+
+.h-80 {
+    height: 80% !important;
+}
+
+.h-85 {
+    height: 85% !important;
+}
+
+.h-90 {
+    height: 90% !important;
+}
+
+.h-95 {
+    height: 95% !important;
 }
 
 .h-100 {
